--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,2 +1,6 @@
 @import "./resets.css";
 @import "./spacing.css";
+@import "./colors.css";
+@import "./display.css";
+@import "./radii.css";
+@import "./typography.css";
