--- a/client/src/styles/resets.css
+++ b/client/src/styles/resets.css
@@ -1,28 +1,24 @@
-/*! Credits: modern-normalize v3.0.1 | MIT License | https://github.com/sindresorhus/modern-normalize */
-
-/*
-Document
-========
-*/
+/*! Credits: modern-normalize v3.0.1 | https://github.com/sindresorhus/modern-normalize */
 
 *,
+::after,
 ::before,
-::after {
-    /* Use a better box model (opinionated). */
-    box-sizing: border-box;
-
+::backdrop,
+::file-selector-button {
     margin: 0;
     padding: 0;
+    border: 0 solid;
+    box-sizing: border-box;
 }
 
 html {
-    /* Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3) */
+    /* Improve consistency of default fonts in all browsers. */
     font-family:
         system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
         "Apple Color Emoji", "Segoe UI Emoji";
-    line-height: 1.15; /* 1. Correct the line height in all browsers. */
-    -webkit-text-size-adjust: 100%; /* 2. Prevent adjustments of font size after orientation changes in iOS. */
-    tab-size: 4; /* 3. Use a more readable tab size (opinionated). */
+
+    line-height: 1.5; /* Correct the line height in all browsers. */
+    -webkit-text-size-adjust: 100%; /* Prevent adjustments of font size after orientation changes in iOS. */
 }
 
 /*
@@ -31,8 +27,6 @@ Sections
 */
 
 body {
-    margin: 0; /* Remove the margin in all browsers. */
-
     min-height: 100vh; /* for browsers that don't support `dvh` yet */
     min-height: 100dvh;
 }
@@ -42,11 +36,19 @@ Text-level semantics
 ====================
 */
 
+h1,
+h2,
+h3,
+h4,
+button,
+input,
+label {
+    line-height: 1.1;
+}
+
 /**
 Add the correct font weight in Chrome and Safari.
 */
-
-b,
 strong {
     font-weight: bolder;
 }
@@ -55,7 +57,6 @@ strong {
 1. Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3)
 2. Correct the odd 'em' font sizing in all browsers.
 */
-
 code,
 kbd,
 samp,
@@ -69,7 +70,6 @@ pre {
 /**
 Add the correct font size in all browsers.
 */
-
 small {
     font-size: 80%;
 }
@@ -77,7 +77,6 @@ small {
 /**
 Prevent 'sub' and 'sup' elements from affecting the line height in all browsers.
 */
-
 sub,
 sup {
     font-size: 75%;
@@ -95,26 +94,8 @@ sup {
 }
 
 /*
-Tabular data
-============
-*/
-
-/**
-Correct table border color inheritance in Chrome and Safari. (https://issues.chromium.org/issues/40615503, https://bugs.webkit.org/show_bug.cgi?id=195016)
-*/
-
-table {
-    border-color: currentcolor;
-}
-
-/*
 Forms
 =====
-*/
-
-/**
-1. Change the font styles in all browsers.
-2. Remove the margin in Firefox and Safari.
 */
 
 button,
@@ -122,43 +103,37 @@ input,
 optgroup,
 select,
 textarea {
-    font-family: inherit; /* 1 */
-    font-size: 100%; /* 1 */
-    line-height: 1.15; /* 1 */
-    margin: 0; /* 2 */
+    /* Change the font styles in all browsers. */
+    font-family: inherit;
+    font-size: 100%;
+
+    /* Inherit fonts for inputs and buttons */
+    background-color: inherit;
+    color: inherit;
 }
 
 /**
-Correct the inability to style clickable types in iOS and Safari.
+Correct the inability to style clickable types in iOS and Safari 
++ Add a better default cursor style
 */
-
 button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
     -webkit-appearance: button;
+    cursor: pointer;
 }
 
 /**
 Remove the padding so developers are not caught out when they zero out 'fieldset' elements in all browsers.
 */
-
 legend {
     padding: 0;
 }
 
 /**
-Add the correct vertical alignment in Chrome and Firefox.
-*/
-
-progress {
-    vertical-align: baseline;
-}
-
-/**
 Correct the cursor style of increment and decrement buttons in Safari.
 */
-
 ::-webkit-inner-spin-button,
 ::-webkit-outer-spin-button {
     height: auto;
@@ -168,7 +143,6 @@ Correct the cursor style of increment and decrement buttons in Safari.
 1. Correct the odd appearance in Chrome and Safari.
 2. Correct the outline style in Safari.
 */
-
 [type="search"] {
     -webkit-appearance: textfield; /* 1 */
     outline-offset: -2px; /* 2 */
@@ -177,30 +151,6 @@ Correct the cursor style of increment and decrement buttons in Safari.
 /**
 Remove the inner padding in Chrome and Safari on macOS.
 */
-
 ::-webkit-search-decoration {
     -webkit-appearance: none;
-}
-
-/**
-1. Correct the inability to style clickable types in iOS and Safari.
-2. Change font properties to 'inherit' in Safari.
-*/
-
-::-webkit-file-upload-button {
-    -webkit-appearance: button; /* 1 */
-    font: inherit; /* 2 */
-}
-
-/*
-Interactive
-===========
-*/
-
-/*
-Add the correct display in Chrome and Safari.
-*/
-
-summary {
-    display: list-item;
 }
