feat(frontend): add color gray-200
* add shadows utility classes

--- a/client/src/styles/colors.css
+++ b/client/src/styles/colors.css
@@ -8,6 +8,7 @@
     --color-brand-900: hsla(236, 60%, 29%, 1);
 
     --color-gray-100: hsla(0, 0%, 96%, 1);
+    --color-gray-200: hsla(0, 0%, 86%, 1);
     --color-gray-300: hsla(0, 0%, 75%, 1);
     --color-gray-500: hsla(0, 0%, 45%, 1);
     --color-gray-700: hsla(0, 0%, 28%, 1);
