--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -3,4 +3,12 @@
 @import "./colors.css";
 @import "./display.css";
 @import "./radii.css";
+@import "./shadows.css";
 @import "./typography.css";
+
+body {
+    color: var(--color-gray-900);
+
+    min-height: 100vh; /* for browsers that don't support `dvh` yet */
+    min-height: 100dvh;
+}
