--- a/client/src/styles/display.css
+++ b/client/src/styles/display.css
@@ -96,3 +96,13 @@
 .flex-nowrap {
     flex-wrap: nowrap;
 }
+
+.text-center {
+    text-align: center;
+}
+.text-start {
+    text-align: start;
+}
+.text-end {
+    text-align: end;
+}
