--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -9,6 +9,8 @@
 body {
     color: var(--color-gray-900);
 
+    font-size: var(--fs-body);
+
     min-height: 100vh; /* for browsers that don't support `dvh` yet */
     min-height: 100dvh;
 }
