--- a/client/src/components/layouts/auth-layout/auth-layout.css
+++ b/client/src/components/layouts/auth-layout/auth-layout.css
@@ -4,6 +4,14 @@
     height: 100vh;
     height: 100dvh;
 }
+.auth-layout--reversed {
+    flex-direction: row-reverse;
+}
+
+.auth-layout__subtitle {
+    margin-top: calc(-1 * var(--spacing-4));
+    margin-bottom: var(--spacing-8);
+}
 
 .auth-layout__illustration {
     display: flex;
@@ -18,6 +26,11 @@
     background-color: var(--color-brand-100);
     color: var(--color-brand-700);
 }
+.auth-layout--reversed .auth-layout__illustration {
+    align-items: flex-end;
+    text-align: end;
+}
+
 @media (max-width: 880px) {
     .auth-layout__illustration {
         display: none;
