--- a/client/src/components/shared/navbar/navbar.css
+++ b/client/src/components/shared/navbar/navbar.css
@@ -1,13 +1,24 @@
 .navbar {
+    background-color: #fff;
+    border-bottom: 1px solid hsla(0, 0%, 0%, 0.2);
+
+    padding-block: var(--spacing-4);
+    margin-bottom: var(--spacing-12);
+
+    position: sticky;
+    top: 0;
+    z-index: 20;
+}
+
+.navbar > .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
-    background-color: #ffffff;
-    border-bottom: 1px solid #e5e7eb;
-    position: sticky;
-    top: 0;
-    z-index: 10;
+    column-gap: var(--spacing-4);
+}
+
+.navbar__logo {
+    line-height: 1;
 }
 
 .left {
@@ -16,94 +27,57 @@
     gap: 0.5rem;
 }
 
-.left img {
-    width: 40px;
-    height: auto;
-}
-
-.left span {
-    font-size: 1.5rem;
-    font-weight: 600;
-    color: #111827;
-}
-
-form {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-}
-
 .right {
     display: flex;
     align-items: center;
-    gap: 0.75rem;
+    gap: 1rem;
 }
-.right button {
+@media (max-width: 800px) {
+    .right {
+        display: none;
+    }
+}
+
+.right > :is(button, a) {
+    line-height: 1;
+}
+
+/** 
+ NavbarSearch 
+*/
+.navbar-search {
+    flex: 1;
+    max-width: 400px;
+    min-width: 0;
+
     display: flex;
     align-items: center;
-    gap: 0.25rem;
-    padding: 0.5rem 1rem;
-    background-color: #3b82f6;
-    color: #ffffff;
-    border: none;
-    border-radius: 0.375rem;
-    cursor: pointer;
+    gap: var(--spacing-2);
 }
-.right button:hover {
-    background-color: #2563eb;
+
+.navbar-search__input {
+    flex: 1;
+    min-width: 0;
+
+    border: 2px solid hsla(0, 0%, 45%, 0.5);
+    border-radius: var(--radius-full);
+
+    padding-inline: var(--spacing-5);
+    padding-block: var(--spacing-3);
 }
-.right button svg {
-    width: 1.25rem;
-    height: 1.25rem;
+.navbar-search__input:focus {
+    outline: none;
+    border-color: var(--color-brand-500);
 }
-.right button span {
-    font-size: 1rem;
-    font-weight: 500;
-}
-.right .cart-icon {
-    position: relative;
-}
-.right .cart-icon::after {
-    content: attr(data-count);
-    position: absolute;
-    top: -0.25rem;
-    right: -0.25rem;
-    background-color: #ef4444;
-    color: #ffffff;
-    border-radius: 50%;
-    padding: 0.125rem 0.5rem;
-    font-size: 0.75rem;
-}
-.right .user-icon {
-    width: 1.25rem;
-    height: 1.25rem;
-    border-radius: 50%;
-    background-color: #e5e7eb;
-    display: flex;
+
+.navbar-search__button {
+    background-color: var(--color-brand-500);
+    color: white;
+    border-radius: var(--radius-full);
+    display: inline-flex;
     align-items: center;
     justify-content: center;
-}
-.right .user-icon svg {
-    width: 1rem;
-    height: 1rem;
-    color: #111827;
-}
-.right .user-icon:hover {
-    background-color: #d1d5db;
-}
-.right .user-icon:hover svg {
-    color: #1f2937;
-}
-.right .user-icon span {
-    display: none; /* Hide text by default */
-}
-.right .user-icon:hover span {
-    display: inline; /* Show text on hover */
-    margin-left: 0.5rem;
-    font-size: 0.875rem;
-    color: #111827;
-}
-.right .user-icon:hover svg {
-    width: 1.25rem;
-    height: 1.25rem;
+    padding: 10px;
+    cursor: pointer;
+    border: none;
 }
