--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -14,3 +14,11 @@ body {
     min-height: 100vh; /* for browsers that don't support `dvh` yet */
     min-height: 100dvh;
 }
+
+.container {
+    max-width: 1440px;
+    width: 100%;
+
+    padding-inline: var(--spacing-4);
+    margin-inline: auto;
+}
