--- a/client/src/styles/colors.css
+++ b/client/src/styles/colors.css
@@ -25,8 +25,13 @@
     --color-success-500: hsla(101, 74%, 42%, 1);
     --color-success-700: hsla(101, 80%, 29%, 1);
     --color-success-900: hsla(101, 87%, 14%, 1);
+
+    --color-border-subtle: hsla(0, 0%, 0%, 0.1);
 }
 
+/** 
+Text color
+*/
 .text-white {
     color: var(--color-white);
 }
@@ -96,4 +101,85 @@
 }
 .text-success-900 {
     color: var(--color-success-900);
+}
+
+/** 
+Background color
+*/
+.bg-white {
+    background-color: var(--color-white);
+}
+.bg-black {
+    background-color: var(--color-black);
+}
+
+.bg-brand-100 {
+    background-color: var(--color-brand-100);
+}
+.bg-brand-500 {
+    background-color: var(--color-brand-500);
+}
+.bg-brand-700 {
+    background-color: var(--color-brand-700);
+}
+.bg-brand-900 {
+    background-color: var(--color-brand-900);
+}
+
+.bg-gray-100 {
+    background-color: var(--color-gray-100);
+}
+.bg-gray-200 {
+    background-color: var(--color-gray-200);
+}
+.bg-gray-300 {
+    background-color: var(--color-gray-300);
+}
+.bg-gray-500 {
+    background-color: var(--color-gray-500);
+}
+.bg-gray-700 {
+    background-color: var(--color-gray-700);
+}
+.bg-gray-900 {
+    background-color: var(--color-gray-900);
+}
+
+.bg-danger-100 {
+    background-color: var(--color-danger-100);
+}
+.bg-danger-300 {
+    background-color: var(--color-danger-300);
+}
+.bg-danger-500 {
+    background-color: var(--color-danger-500);
+}
+.bg-danger-700 {
+    background-color: var(--color-danger-700);
+}
+.bg-danger-900 {
+    background-color: var(--color-danger-900);
+}
+
+.bg-success-100 {
+    background-color: var(--color-success-100);
+}
+.bg-success-300 {
+    background-color: var(--color-success-300);
+}
+.bg-success-500 {
+    background-color: var(--color-success-500);
+}
+.bg-success-700 {
+    background-color: var(--color-success-700);
+}
+.bg-success-900 {
+    background-color: var(--color-success-900);
+}
+
+/** 
+Border color
+*/
+.border-subtle {
+    border: 1px solid var(--color-border-subtle);
 }
