--- a/client/src/styles/display.css
+++ b/client/src/styles/display.css
@@ -1,3 +1,4 @@
+/* `display` property */
 .d-grid {
     display: grid;
 }
@@ -26,6 +27,7 @@
     display: inline-block;
 }
 
+/* align-items */
 .items-center {
     align-items: center;
 }
@@ -42,6 +44,24 @@
     align-items: baseline;
 }
 
+/* align-self */
+.self-center {
+    align-self: center;
+}
+.self-start {
+    align-self: flex-start;
+}
+.self-end {
+    align-self: flex-end;
+}
+.self-stretch {
+    align-self: stretch;
+}
+.self-baseline {
+    align-self: baseline;
+}
+
+/* justify-content */
 .justify-center {
     justify-content: center;
 }
@@ -61,6 +81,7 @@
     justify-content: flex-end;
 }
 
+/* flex-direction */
 .flex-col {
     flex-direction: column;
 }
