--- a/client/src/styles/resets.css
+++ b/client/src/styles/resets.css
@@ -115,6 +115,8 @@ button,
 [type="reset"],
 [type="submit"] {
     -webkit-appearance: button;
+}
+:is(button, [type="button"], [type="reset"], [type="submit"]):enabled {
     cursor: pointer;
 }
 
