--- a/client/src/styles/resets.css
+++ b/client/src/styles/resets.css
@@ -14,7 +14,7 @@
 html {
     /* Improve consistency of default fonts in all browsers. */
     font-family:
-        system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+        "Inter", system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
         "Apple Color Emoji", "Segoe UI Emoji";
 
     line-height: 1.5; /* Correct the line height in all browsers. */
