--- a/client/src/components/layouts/root-layout/root-layout.css
+++ b/client/src/components/layouts/root-layout/root-layout.css
@@ -9,5 +9,7 @@
 }
 
 .root-layout__body {
-    padding-block: var(--spacing-12);
+    /* padding-block: var(--spacing-12); */
+    display: flex;
+    flex-direction: column;
 }
