--- a/client/src/components/layouts/admin-layout/admin-layout.css
+++ b/client/src/components/layouts/admin-layout/admin-layout.css
@@ -1,10 +1,10 @@
 .admin-layout {
-    /* flex: 1; */
+    flex: 1;
     display: flex;
 }
 
 .admin-layout__main {
-    flex: 1;
+    flex: 2 2 0%;
     max-width: calc(1440px - var(--spacing-8));
 
     padding-block: var(--spacing-12);
