--- a/client/src/pages/admin/new-product/new-product.css
+++ b/client/src/pages/admin/new-product/new-product.css
@@ -1,2 +1,19 @@
 .new-product {
 }
+
+.new-product__form-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    column-gap: var(--spacing-8);
+    row-gap: var(--spacing-12);
+}
+@media (min-width: 1024px) {
+    .new-product__form-wrapper {
+        flex-direction: row;
+    }
+}
+
+.new-product__create-btn {
+    margin-top: var(--spacing-16);
+}
