--- a/client/src/components/layouts/account-layout/account-layout.css
+++ b/client/src/components/layouts/account-layout/account-layout.css
@@ -1,6 +1,8 @@
 .account-layout {
     flex-grow: 1;
 
+    padding-block: var(--spacing-12);
+
     display: flex;
     flex-direction: column;
     gap: var(--spacing-8);
