--- a/client/src/pages/account/my-orders/my-orders.css
+++ b/client/src/pages/account/my-orders/my-orders.css
@@ -1,7 +1,5 @@
 .orders-container {
     display: flex;
-    min-height: 100vh;
-    background-color: #f9fafb;
 }
 
 /* Make sure sidebar is fixed or set according to your sidebar styles */
@@ -39,8 +37,8 @@
 }
 
 .tab.active {
-    color: #0a74da;
-    border-bottom-color: #0a74da;
+    color: var(--color-brand-500);
+    border-bottom-color: var(--color-brand-500);
     font-weight: 700;
 }
 
@@ -62,7 +60,7 @@
     font-size: 1rem;
     font-weight: 600;
     color: white;
-    background-color: #0a74da;
+    background-color: var(--color-brand-500);
     border: none;
     border-radius: 25px;
     cursor: pointer;
