feat(frontend:admin): integrate all products page with api

--- a/client/src/components/admin-featured-products-grid/admin-featured-products-grid.css
+++ b/client/src/components/admin-featured-products-grid/admin-featured-products-grid.css
@@ -1,4 +1,4 @@
-.admin-featured-products {
+.admin-featured-products-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
     gap: 1rem;
