--- a/client/src/components/shared/error-alert/error-alert.css
+++ b/client/src/components/shared/error-alert/error-alert.css
@@ -5,4 +5,5 @@
     border: 1px solid var(--color-danger-300);
     border-radius: var(--radius-md);
     padding: var(--spacing-4);
+    margin-block: var(--spacing-4);
 }
