--- a/client/src/components/shared/product-card/product-card.css
+++ b/client/src/components/shared/product-card/product-card.css
@@ -7,7 +7,6 @@
     box-shadow: var(--shadow-2xs);
     border: 1px solid hsla(0, 0%, 0%, 0.1);
 
-    cursor: pointer;
     max-width: 300px;
     margin: 0 auto;
 
@@ -46,7 +45,8 @@
 }
 
 .product-img img {
-    max-width: 100%;
+    width: 100%;
+    min-width: 200px;
     max-height: 200px;
     object-fit: contain;
 }
