--- a/client/src/components/shared/button/button.module.css
+++ b/client/src/components/shared/button/button.module.css
@@ -1,4 +1,5 @@
 .button {
+    border: 2px solid;
     border-radius: var(--radius-md);
 
     font-size: var(--fs-button);
@@ -13,36 +14,39 @@
     cursor: not-allowed;
 }
 
-.button--var-filled {
+.button.button--var-filled {
+    border-color: transparent;
     color: var(--color-white);
     background-color: var(--btn-bg-filled);
 }
-.button--var-outlined {
-    border: 2px solid var(--btn-border-color);
+.button.button--var-outlined {
+    border-color: var(--btn-border-color);
     color: var(--btn-border-color);
 }
-.button--var-faded {
+.button.button--var-faded {
+    border-color: transparent;
     background-color: var(--btn-bg-faded);
     color: var(--btn-text-faded);
 }
-.button--var-ghost {
+.button.button--var-ghost {
+    border-color: transparent;
     background-color: transparent;
     color: var(--btn-text-faded);
 }
 
-.button--clr-brand {
+.button.button--clr-brand {
     --btn-bg-filled: var(--color-brand-500);
     --btn-bg-faded: var(--color-brand-100);
     --btn-text-faded: var(--color-brand-700);
     --btn-border-color: var(--color-brand-700);
 }
-.button--clr-gray {
+.button.button--clr-gray {
     --btn-bg-filled: var(--color-gray-900);
     --btn-bg-faded: var(--color-gray-100);
     --btn-text-faded: var(--color-gray-900);
     --btn-border-color: var(--color-gray-900);
 }
-.button--clr-danger {
+.button.button--clr-danger {
     --btn-bg-filled: var(--color-danger-500);
     --btn-bg-faded: var(--color-danger-100);
     --btn-text-faded: var(--color-danger-700);
