--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -3,6 +3,7 @@
 @import "./spacing.css";
 @import "./colors.css";
 @import "./display.css";
+@import "./position.css";
 @import "./radii.css";
 @import "./shadows.css";
 @import "./typography.css";
