--- a/client/src/components/shared/product-card/product-card.css
+++ b/client/src/components/shared/product-card/product-card.css
@@ -1,14 +1,14 @@
 .product-card {
     position: relative;
     background-color: white;
-    border-radius: var(--radius-md);
-    padding: var(--spacing-5);
+    border-radius: var(--radius-lg);
+    padding-bottom: var(--spacing-0);
 
     box-shadow: var(--shadow-2xs);
     border: 1px solid hsla(0, 0%, 0%, 0.1);
 
     max-width: 300px;
-    margin: 0 auto;
+    overflow: hidden;
 
     transition: 0.2s ease;
     transition-property: transform box-shadow;
@@ -19,77 +19,73 @@
     box-shadow: var(--shadow-md);
 }
 
-.product-heart-icon {
-    position: absolute;
-    top: var(--spacing-2);
-    left: var(--spacing-2);
-
-    padding: var(--spacing-1\.5);
-
-    color: var(--color-gray-500);
-    transition: 0.2s ease;
-    transition-property: color background-color;
-}
-
-.product-heart-icon:hover {
-    color: var(--color-brand-500);
-    background-color: var(--color-gray-100);
-}
-
-.product-img {
+.product-card__img {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 40px 0 20px 0;
     min-height: 200px;
 }
-
-.product-img img {
+.product-card__img img {
     width: 100%;
     min-width: 200px;
-    max-height: 200px;
-    object-fit: contain;
+    height: 200px;
+    object-fit: cover;
 }
 
-.product-category {
-    color: hsla(0, 0%, 45%, 1);
+.product-card__content {
+    line-height: 1;
+    text-decoration: none;
+    color: inherit;
+    padding: var(--spacing-4) var(--spacing-4);
+}
+
+.product-card__category {
+    width: fit-content;
+
+    margin-bottom: var(--spacing-3);
+    padding: var(--spacing-1\.5) var(--spacing-3);
+
+    border: 1px solid var(--color-border-subtle);
+    border-radius: var(--radius-full);
+
+    color: var(--color-gray-500);
+    font-weight: var(--fw-medium);
     font-size: 14px;
-    font-weight: 400;
-    margin-bottom: 8px;
 }
 
-.product-name {
-    color: #1d1d1f;
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 1.3;
-    margin-bottom: 16px;
-    min-height: 48px;
-    overflow: hidden;
+.product-card__name {
+    color: var(--color-gray-900);
+
+    font-size: var(--fs-h3);
+    font-weight: var(--fw-semibold);
+
+    margin-bottom: var(--spacing-6);
 }
-.product-price {
-    margin-bottom: 8px;
+
+.product-card__price {
     display: flex;
     align-items: center;
-    gap: 8px;
-    font-size: 20px;
-    font-weight: 600;
-    color: hsla(236, 80%, 57%, 1);
-}
+    gap: var(--spacing-2);
 
-.product-price .original-price {
-    color: hsla(0, 0%, 45%, 1);
+    color: var(--color-brand-500);
+
+    font-size: var(--fs-h3);
+    font-weight: var(--fw-semibold);
+
+    margin-bottom: var(--spacing-2);
+}
+.product-card__price .original-price {
+    color: var(--color-gray-500);
     font-size: 16px;
-    font-weight: 400;
+    font-weight: var(--fw-semibold);
+
     text-decoration: line-through;
 }
 
-.product-stock {
-    color: hsla(0, 0%, 45%, 1);
+.product-card__stock {
+    color: var(--color-gray-500);
     font-size: 14px;
-    font-weight: 400;
 }
-
-.product-stock.out {
-    color: red;
+.product-card__stock.out {
+    color: var(--text-danger-500);
 }
