--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -24,3 +24,8 @@ body {
     padding-inline: var(--spacing-4);
     margin-inline: auto;
 }
+
+.home-page-section {
+    margin-block: var(--spacing-8);
+    padding-top: var(--spacing-12);
+}
