--- a/client/src/components/shared/product-card/product-card.css
+++ b/client/src/components/shared/product-card/product-card.css
@@ -1,3 +1,12 @@
+/* grid for product-card(s) */
+.products-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    align-content: start;
+    gap: var(--spacing-4);
+}
+
+/*  */
 .product-card {
     position: relative;
     background-color: white;
@@ -7,7 +16,6 @@
     box-shadow: var(--shadow-2xs);
     border: 1px solid hsla(0, 0%, 0%, 0.1);
 
-    max-width: 300px;
     overflow: hidden;
 
     transition: 0.2s ease;
