--- a/client/src/styles/typography.css
+++ b/client/src/styles/typography.css
@@ -34,7 +34,7 @@
 .fs-h1 {
     font-size: var(--fs-h1);
     font-weight: var(--fw-extrabold);
-    letter-spacing: var(--tracking-tighter);
+    letter-spacing: var(--tracking-tight);
 }
 .fs-h2 {
     font-size: var(--fs-h2);
