--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -8,8 +8,15 @@
 @import "./shadows.css";
 @import "./typography.css";
 
+html,
+body,
+#root {
+    height: 100%;
+}
+
 body {
     color: var(--color-gray-900);
+    accent-color: var(--color-brand-500);
 
     font-size: var(--fs-body);
 
