--- a/client/src/components/layouts/admin-layout/admin-layout.css
+++ b/client/src/components/layouts/admin-layout/admin-layout.css
@@ -1,11 +1,23 @@
 .admin-layout {
-    flex: 1;
+    height: 100%;
+    min-height: 100vh;
+    min-height: 100dvh;
+
     display: flex;
+    flex-direction: column;
 }
 
-.admin-layout__main {
+.admin-layout__body {
+    flex: 1;
+    display: flex;
+
+    overflow: auto;
+}
+
+.admin-layout__outlet {
     flex: 2 2 0%;
     max-width: calc(1440px - var(--spacing-8));
+    overflow: auto;
 
     padding-block: var(--spacing-12);
     padding-inline: var(--spacing-8) var(--spacing-4);
