--- a/client/src/components/filters-panel/filterspanel.css
+++ b/client/src/components/filters-panel/filterspanel.css
@@ -1,8 +1,10 @@
 .filters-panel {
-    background: #f5f5f5;
+    position: sticky;
+    top: 0;
+
     padding: 1rem;
-    border-radius: 8px;
     width: 250px;
+    align-self: flex-start;
     flex-shrink: 0;
 }
 
